--- a/views/index_save.handlebars
+++ b/views/index_save.handlebars
@@ -1,21 +1,42 @@
-<h1>The Burger Cafe Menu</h1>
-Waiting to be devoured!
-{{#each burgerData}}
-  <pre>
-    {{#if this.devoured}}
-      <span>             <span>This burger was eaten: {{burger_name}}
-    {{else}}
-      {{burger_name}} 
-      <form action="/update/{{ id }}" method="post">
-      <button type="submit">Devour it!</button>
-    </form> 
-    {{/if}}  
-  </pre>
-{{/each}}
+<h1> Burgers!</h1>
 
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col s6">
+        {{#each burgerData}}
+          {{#unless this.devoured}}
+            <div>
+              <form action="/update/{{id}}" method="POST">
+                <button type="submit" class='burgerAvailable'> {{burger_name}}</button>
+              </form>
+            </div>
+          {{/unless}}
+        {{/each}}
+      </div>
 
+      <div class="col s6">
+        {{#each burgerData}}
+          {{#if this.devoured}}
+            <div class='burgerEaten'>
+              <div>
+                 <span>             <span> {{burger_name}} was eaten
+              </div>
+            </div>
+          {{/if}}
+        {{/each}}
+      </div>
+    </div>
+  </div>
+</main>
 
-<form action="/create" method="post">
-  <textarea name="item" rows="2" cols="30"></textarea>
-  <button type="submit">Enter Your Burger</button>
-<form>
+<h2>Cook A Burger Option</h2>
+
+<div class="row">
+  <div class="col s12">
+    <form action="/create" method="POST">
+      <input type="text" id="name" name="burger_name">
+      <button type="submit" class="addBurgerButton">Cook The Burger</button>
+    </form>
+  </div>
+</div>
