--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
-<h1> Burgers!</h1>
+<center><h1> Burgers!</h1></center>
 
 <main>
   <div class="container">
+   <div class="jumbotron" id="jumbo">
     <div class="row">
       <div class="col s6">
         {{#each burgerData}}
@@ -27,16 +28,17 @@
         {{/each}}
       </div>
     </div>
+    </div>
   </div>
 </main>
 
-<h2>Cook A Burger Option</h2>
+<center><h2>Cook A Burger </h2><center>
 
 <div class="row">
   <div class="col s12">
-    <form action="/create" method="POST">
+   <center> <form action="/create" method="POST">
       <input type="text" id="name" name="burger_name">
       <button type="submit" class="addBurgerButton">Cook The Burger</button>
-    </form>
+    </form></center>
   </div>
 </div>
