--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
   <div class="container">
    <div class="jumbotron" id="jumbo">
     <div class="row">
-      <div class="col s6">
+      <div class="col-md-6">
         {{#each burgerData}}
           {{#unless this.devoured}}
             <div>
@@ -16,7 +16,7 @@
         {{/each}}
       </div>
 
-      <div class="col s6">
+      <div class="col-md-6">
         {{#each burgerData}}
           {{#if this.devoured}}
             <div class='burgerEaten'>
