--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
           {{#unless this.devoured}}
             <div>
               <form action="/update/{{id}}" method="POST">
-                <button type="submit" class='burgerAvailable'> {{burger_name}}</button>
+                <button type="submit" class='burgerAvailable'> {{burger_name}}" eat the burger"</button>
               </form>
             </div>
           {{/unless}}
